Calculate an expected number of visible destinations more accurately to prevent extra (and unnecessary) destination search window resize. In some cases, since select control dropdown is not moved along with the control, close the select element on destination select window resize to keep UI consistent.
BUG=363557

Review URL: https://codereview.chromium.org/259873002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@266604 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 89b5cd1f3f61b41e806025bb039ab0d625a21e6b

--- a/chrome/browser/resources/print_preview/search/destination_list.css
+++ b/chrome/browser/resources/print_preview/search/destination_list.css
@@ -26,10 +26,14 @@
 }
 
 .destination-list .throbber-container {
-  -webkit-box-align: center;
-  display: -webkit-box;
-  height: 30px;
-  padding: 0 22px;
+  display: inline;
+  padding: 0 16px 0 8px;
+  position: relative;
+}
+
+.destination-list .throbber {
+  position: absolute;
+  top: -1px;
 }
 
 .destination-list .no-destinations-message {
